--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">  
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />    
-    <title>Fourteen - Responsive Landing Page Template</title>
+    <title>融云链</title>
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="lib/images/favicon.png">
     <meta name="description" content="">
