--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,600,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="lib/css/main.css">
     <!-- end CSS-->
     <script src="lib/js/jquery-1.10.2.min.js"></script>
     <script src="lib/js/jquery-migrate-1.2.1.js"></script>
@@ -80,6 +81,7 @@
                                 <li>
                                     <a href="#pricing">团队</a>
                                 </li>
+                                <li id="i18n"><a href="en.html">En</a></li>
                                 <!--<li class="last">
                                     <a href="#subscribe">Subscribe</a>
                                 </li>-->
@@ -1030,7 +1032,7 @@
                     <div class="footer_line"><span></span></div>
                     
                     <!--begin copyright -->            
-                    <p class="copyright">Copyright © 2018. All rights reserved.<br>Designed &amp; developed by <a href="https://www.decar.com" target="_blank">Decartes Chain</a>.</p>
+                    <p class="copyright">Copyright © 2018. <a href="https://www.decar.xyz" target="_blank">笛卡尔融云链</a> 版权所有</p>
                     <!--end copyright -->
                     
                 </div>
