--- a/en.html
+++ b/en.html
@@ -926,7 +926,7 @@
                             <p class="success_box" style="display:none;">We received your message and you'll hear from us soon. Thank You!</p>
                             <form id="contact-form" class="contact_form" action="contact.php" method="post">
                                 <input id="email" name="cf_email" placeholder="Email adress:" />
-                                <input type="submit" value="Subscribe for more candies" id="submit-button" />
+                                <input type="submit" value="Subscribe" id="submit-button" />
                             </form>
                         </div>
                         <!--end newsletter form -->
@@ -1004,7 +1004,7 @@
                     <div class="footer_line"><span></span></div>
                     
                     <!--begin copyright -->            
-                    <p class="copyright">Copyright © 2018. All rights reserved.<br>Designed &amp; developed by <a href="https://www.decar.com" target="_blank">Decartes Chain</a>.</p>
+                    <p class="copyright">Copyright © 2018. All rights reserved.<br>Designed &amp; developed by <a href="https://www.dcar.xyz" target="_blank">Decartes Chain</a>.</p>
                     <!--end copyright -->
                     
                 </div>
