--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                     <div class="footer_line"><span></span></div>
                     
                     <!--begin copyright -->            
-                    <p class="copyright">Copyright © 2018. <a href="https://www.decar.xyz" target="_blank">笛卡尔融云链</a> 版权所有</p>
+                    <p class="copyright">Copyright © 2018. <a href="https://www.dcar.xyz" target="_blank">笛卡尔融云链</a> 版权所有</p>
                     <!--end copyright -->
                     
                 </div>
