--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                 <div class="text_align_right">
                                     <h4 class="small_margins"><span class="icon"><i class="fa fa-flag"></i></span></h4>
                                     <p class="time">2018.5.18</p>
-                                    <p>亚太唯一代理机构落户长沙，覆盖整个亚太区 </p>
+                                    <p>笛卡尔与六道科技以及吉田资本签署亚太合作协议</p>
                                     <p>笛卡尔链V1.0版本开始测试 </p>
 
                                 </div>
@@ -698,7 +698,7 @@
 
                                 <div class="text_align_left">
                                     <h4 class="small_margins">CTO， 联合创始人Madini O. Alassafi</h4>
-                                    <p>电子计算机系博士，主要研究方向为信息与计算机技术、信息安全、区块链技术，发表过多篇区块链技术著作，曾担任WTC的首席技术顾问</p>
+                                    <p>电子计算机系博士，主要研究方向为信息与计算机技术、信息安全、区块链技术，发表过多篇区块链技术著作，长期担任首席技术顾问</p>
                                 </div>
 
                             </div>
