--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             
             <!--begin info_white -->
             <div class="info_white bounce_fade">
-                <h3 class="index_title">笛卡尔融云连技术架构</h3>
+                <h3 class="index_title">笛卡尔融云链技术架构</h3>
                 <div class="index_img"><img class="tech" src="lib/images/tech.png"></div>
             </div>
             <!--end info_white -->
@@ -378,7 +378,7 @@
                             <div class="features_item on">
                                 <div class="circle"></div>
                                 <div class="text_align_right">
-                                    <p class="time">2017.6</p>
+                                    <p class="time">2017.3</p>
                                     <p>融云链项目组及研发团队组建完毕</p>
                                     <p>笛卡尔项目进入筹划阶段</p>
 
@@ -519,9 +519,8 @@
                                 <div class="text_align_right">
                                     <h4 class="small_margins"><span class="icon"><i class="fa fa-sort-amount-asc"></i></span></h4>
                                     <p class="time">2018.9下旬</p>
-                                    <p>笛卡尔融云链国际官网上线</p>
-                                    <p>项目智慧生态系统/白皮书进行公示</p>
-                                    <p>笛卡尔融云链部分开源、首期矿机全球预售开启</p>
+                                    <p>笛卡尔融云链Token登陆国际数字货币交易所</p>
+                                    <p>(火币、中币、比特儿等)</p>
 
                                 </div>
 
