--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     <a href="#showcase">应用场景</a>
                                 </li>
                                 <li>
-                                    <a href="#services">技术架构</a>
+                                    <a href="https://github.com/DescartesChain">技术架构</a>
                                 </li>
                                 <li>
                                     <a href="#features">发展规划</a>
@@ -1031,7 +1031,7 @@
           <div class="modal-content">
             <span class="close">&times;</span>
             <a href="./miner.html">
-                 <img src="./lib/images/poster.jpg">
+                 <img src="./lib/images/poster.jpg" id="poster">
             </a>
             <!-- <div style="width: 100px;height: 50px;border: 1px solid red;position: absolute;bottom: 10px;"></div> -->
           </div>
@@ -1099,7 +1099,7 @@
         setTimeout(function(){
              modal.style.display = "none";
             console.log(modal.style.display)
-        },5000)
+        },40000)
 
         // When the user clicks on <span> (x), close the modal
         span.onclick = function() {
