--- a/miner.html
+++ b/miner.html
@@ -66,7 +66,7 @@
                             <a href="index.html#showcase">应用场景</a>
                         </li>
                         <li>
-                            <a href="index.html#services">技术架构</a>
+                            <a href="index.html#services">技术资源</a>
                         </li>
                         <li>
                             <a href="index.html#features">发展规划</a>
@@ -302,7 +302,7 @@
                 <div class="twelvecol">
                     <!--begin sixcol -->
                     <div class="sixcol last right_fade">
-                        <img src="lib/images/6261.png" alt="picture">
+                        <img src="lib/images/ui.png" alt="picture">
                     </div>
                     <!--end sixcol -->
                     <!--begin sixcol -->
