--- a/en.html
+++ b/en.html
@@ -71,6 +71,9 @@
                                     <a href="#container">Home</a>
                                 </li>
                                 <li>
+                                    <a href="./miner.html">Miner</a>
+                                </li>
+                                <li>
                                     <a href="#showcase">Applications</a>
                                 </li>
                                 <li>
