--- a/minerEn.html
+++ b/minerEn.html
@@ -48,7 +48,7 @@
                 <!--begin twelvecol -->
                 <div class="twelvecol">
                     <!--begin logo -->
-                    <a href="index.html" id="logo"><img src="lib/images/logo.png"></a>
+                    <a href="index.html" id="logo"><img src="lib/images/logo_en.png"></a>
                     <!--end logo -->
                     <!--begin purchase button -->
                     <!--<a href="#" class="purchase">Purchase Now</a>-->
@@ -57,24 +57,24 @@
                     <!--begin nav -->
                     <ul id="nav">
                         <li>
-                            <a href="index.html">首页</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="">矿机</a>
+                            <a href="#">Miner</a>
                         </li>
                         <li>
-                            <a href="index.html#showcase">应用场景</a>
+                            <a href="index.html#showcase">Applications</a>
                         </li>
                         <li>
-                            <a href="index.html#services">技术资源</a>
+                            <a href="index.html#services">Technology</a>
                         </li>
                         <li>
-                            <a href="index.html#features">发展规划</a>
+                            <a href="index.html#features">Roadmap</a>
                         </li>
                         <li>
-                            <a href="index.html#pricing">团队</a>
+                            <a href="index.html#pricing">Team</a>
                         </li>
-                        <li id="i18n"><a href="minerEn.html"> En </a></li>
+                        <li id="i18n"><a href="miner.html"> 中文 </a></li>
                         <!--<li class="last">
                             <a href="#subscribe">Subscribe</a>
                         </li>-->
@@ -116,13 +116,13 @@
                             <div class="intro">
                                 <h1 class=" bounce_fade"><span class="type">DCAR Miner</span><span class="name">&nbsp;&nbsp;&nbsp;x1</span></h1>
                                 <p class="desc  bounce_fade">
-                                    第一代高性能笛卡尔矿机
+                                    First generation high performance Cartesian mining machine
                                 </p>
                                 <div class="awards"> </div>
                                 <!---price_con start-->
                                 <div class="price_con bounce_fade">
                                     <div class="price">￥11999</div>
-                                    <a href="http://openminer.mikecrm.com/zAHcgGY" class="price_button">立即预约</a>
+                                    <a href="http://openminer.mikecrm.com/zAHcgGY" class="price_button">subscribe</a>
                                 </div>
                                 <!---price_con end-->
                             </div>
@@ -142,13 +142,13 @@
                             <div class="intro">
                                 <h1 class=" bounce_fade"><span class="type">DCAR Miner</span><span class="name">&nbsp;&nbsp;&nbsp;x1</span></h1>
                                 <p class="desc  bounce_fade">
-                                    第一代高性能笛卡尔矿机
+                                    First generation high performance Cartesian mining machine
                                 </p>
                                 <div class="awards"> </div>
                                 <!---price_con start-->
                                 <div class="price_con bounce_fade">
                                     <div class="price">￥11999</div>
-                                    <a href="http://openminer.mikecrm.com/zAHcgGY" class="price_button">立即预约</a>
+                                    <a href="http://openminer.mikecrm.com/zAHcgGY" class="price_button">subscribe</a>
                                 </div>
                                 <!---price_con end-->
                             </div>
@@ -184,10 +184,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-bolt" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">澎湃动力
+                                        <div class="t">Powerful Engine 
                                         </div>
                                         <div class="c">
-                                            <p>企业级4核CPU   64位处理器
+                                            <p>Enterprise-level quad core CPU; 64-bit processor. 
                                             </p>
                                         </div>
                                     </div>
@@ -195,10 +195,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-plug" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">接口丰富
+                                        <div class="t">Multiple Connectors
                                         </div>
                                         <div class="c">
-                                            <p>1080P HDMI, IEEE802b/gn, USB, SATA, SPI, JTAG你需要的都在这里
+                                            <p>All you need are here: 1080P HDMI, IEEE802b/gn, USB, SATA, SPI, JTAG. 
                                             </p>
                                         </div>
                                     </div>
@@ -206,10 +206,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-lock" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">硬件加密
+                                        <div class="t">Encrypted Hardware
                                         </div>
                                         <div class="c">
-                                            <p>原生 TrustZone安全加密机制,拆机自毁
+                                            <p>Original security encryption mechanism of TrustZone; self-destruction triggered by any teardown. 
                                             </p>
                                         </div>
                                     </div>
@@ -252,10 +252,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-pencil" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">匠心设计
+                                        <div class="t">Excellent Thoughtful Design
                                         </div>
                                         <div class="c">
-                                            <p>技术与艺术的完美融合,用 DCAR x1 感受时代进步
+                                            <p>A perfect combination of technology and art, with DCAR x1 to experience the progress of times 
                                             </p>
                                         </div>
                                     </div>
@@ -263,10 +263,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">持续在线
+                                        <div class="t">Quiet and Environmental-Friendly Experience
                                         </div>
                                         <div class="c">
-                                            <p>7x24无间断稳定运行, 低功耗, 无噪音
+                                            <p>7x24 constantly stable operation; low power consumption; no noise. 
                                             </p>
                                         </div>
                                     </div>
@@ -274,10 +274,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-heartbeat" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">维护省心
+                                        <div class="t">Easy maintenance
                                         </div>
                                         <div class="c">
-                                            <p>接通电源和网络,无需配置, 自动工作
+                                            <p>Automatic operation after the connection with power source and network, no requirement for configuration
                                             </p>
                                         </div>
                                     </div>
@@ -331,28 +331,28 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-credit-card" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">DCAR 多功能钱包</div>
+                                        <div class="t">DCAR Multi-Functional Wallet</div>
                                         <div class="c">
-                                            <p>笛卡尔矿机, 数字资产统一管理, 跨平台,多终端,每日收益,大盘行情 ,一览无余</p>
+                                            <p>Descartes mining dig; United digital assets management; cross-platform; multiple terminals；daily earning; market prices in a glance. </p>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-life-ring" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">技术支撑</div>
+                                        <div class="t">Professional Technological Support </div>
                                         <div class="c">
-                                            <p>技术团队为矿机系统及软件提供终身免费升级</p>
+                                            <p>Professional technology team provides a lifelong free update service for the systems and softwares of mining digs. </p>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-wrench" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">定制系统
+                                        <div class="t">Custom system
                                         </div>
                                         <div class="c">
-                                            <p>基于 Linux 内核, 内置加密引擎,  金融级安全防护
+                                            <p>Based on Linux kernel, built-in encryption engine, financial level security protection.
                                             </p>
                                         </div>
                                     </div>
@@ -387,7 +387,7 @@
             <div class="twelvecol">
 
                 <!--begin footer_logo icons -->
-                <span class="footer_logo"><img class="foot_logo" src="lib/images/logo.png"></span>
+                <span class="footer_logo"><img class="foot_logo" src="lib/images/logo_en.png"></span>
                 <!--end footer_logo icons -->
 
                 <!--begin social icons -->
@@ -418,7 +418,7 @@
                 <div class="footer_line"><span></span></div>
 
                 <!--begin copyright -->
-                <p class="copyright">Copyright&nbsp;2018. <a href="https://www.dcar.xyz" target="_blank">笛卡尔融云链</a> 版权所有</p>
+                <p class="copyright">Copyright&nbsp;2018. <a href="https://www.dcar.xyz" target="_blank"></a>All rights reserved. <br>Designed & developed by Decartes Chain.</p>
                 <!--end copyright -->
 
             </div>
