--- a/minerEn.html
+++ b/minerEn.html
@@ -121,7 +121,7 @@
                                 <div class="awards"> </div>
                                 <!---price_con start-->
                                 <div class="price_con bounce_fade">
-                                    <div class="price">￥11999</div>
+                                    <div class="price">$1820</div>
                                     <a href="http://openminer.mikecrm.com/zAHcgGY" class="price_button">subscribe</a>
                                 </div>
                                 <!---price_con end-->
