--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <a href="#container">Home</a>
                                 </li>
                                 <li>
-                                    <a href="./miner.html">Miner</a>
+                                    <a href="./minerEn.html">Miner</a>
                                 </li>
                                 <li>
                                     <a href="#showcase">Applications</a>
