--- a/minerEn.html
+++ b/minerEn.html
@@ -66,7 +66,7 @@
                             <a href="index.html#showcase">Applications</a>
                         </li>
                         <li>
-                            <a href="index.html#services">Technology</a>
+                            <a href="https://github.com/DescartesChain">Technology</a>
                         </li>
                         <li>
                             <a href="index.html#features">Roadmap</a>
@@ -152,7 +152,7 @@
                                 </div>
                                 <!---price_con end-->
                             </div>
-                        </div>    
+                        </div>
 
                     </div>
 
@@ -184,10 +184,10 @@
                                 <li class="clearfix">
                                     <div class="icon fl"><i class="fa fa-bolt" aria-hidden="true"></i></div>
                                     <div class="li_cl">
-                                        <div class="t">Powerful Engine 
+                                        <div class="t">Powerful Engine
                                         </div>
                                         <div class="c">
-                                            <p>Enterprise-level quad core CPU; 64-bit processor. 
+                                            <p>Enterprise-level quad core CPU; 64-bit processor.
                                             </p>
                                         </div>
                                     </div>
@@ -198,7 +198,7 @@
                                         <div class="t">Multiple Connectors
                                         </div>
                                         <div class="c">
-                                            <p>All you need are here: 1080P HDMI, IEEE802b/gn, USB, SATA, SPI, JTAG. 
+                                            <p>All you need are here: 1080P HDMI, IEEE802b/gn, USB, SATA, SPI, JTAG.
                                             </p>
                                         </div>
                                     </div>
@@ -209,7 +209,7 @@
                                         <div class="t">Encrypted Hardware
                                         </div>
                                         <div class="c">
-                                            <p>Original security encryption mechanism of TrustZone; self-destruction triggered by any teardown. 
+                                            <p>Original security encryption mechanism of TrustZone; self-destruction triggered by any teardown.
                                             </p>
                                         </div>
                                     </div>
@@ -255,7 +255,7 @@
                                         <div class="t">Excellent Thoughtful Design
                                         </div>
                                         <div class="c">
-                                            <p>A perfect combination of technology and art, with DCAR x1 to experience the progress of times 
+                                            <p>A perfect combination of technology and art, with DCAR x1 to experience the progress of times
                                             </p>
                                         </div>
                                     </div>
@@ -266,7 +266,7 @@
                                         <div class="t">Quiet and Environmental-Friendly Experience
                                         </div>
                                         <div class="c">
-                                            <p>7x24 constantly stable operation; low power consumption; no noise. 
+                                            <p>7x24 constantly stable operation; low power consumption; no noise.
                                             </p>
                                         </div>
                                     </div>
