--- a/miner.html
+++ b/miner.html
@@ -66,7 +66,7 @@
                             <a href="index.html#showcase">应用场景</a>
                         </li>
                         <li>
-                            <a href="index.html#services">技术资源</a>
+                            <a href="https://github.com/DescartesChain">技术资源</a>
                         </li>
                         <li>
                             <a href="index.html#features">发展规划</a>
@@ -152,7 +152,7 @@
                                 </div>
                                 <!---price_con end-->
                             </div>
-                        </div>    
+                        </div>
 
                     </div>
 
