--- a/11.html
+++ b/11.html
@@ -1,221 +1,61 @@
-
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta content="telephone=no,email=no" name="format-detection">
-    <meta name="author" content="haibao"/>
-    <meta name="url" content="http://www.jq22.com/"/>
-    <meta name="keywords" content="jquery,css3,表单,弹出层,插件"/>
-    <meta name="description" content="jQuery+Css3 多功能表单弹出层插件"/>
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="animate.min.css">
-    <title>jQuery+Css3 多功能表单弹出层插件</title>
+    <meta charset="UTF-8">
+    <title>几行简单的jQuery代码搞定tab标签切换效果</title>
+    <style>
+        *{ margin:0; padding:0;list-style: none;}
+        body {font:12px/1.5 Tahoma;}
+        #outer {width:450px;margin:150px auto;}
+        #tab {overflow:hidden;zoom:1;background:#000;border:1px solid #000;}
+        #tab li {float:left;color:#fff;height:30px;    cursor:pointer;    line-height:30px;padding:0 20px;}
+        #tab li.current {color:#000;background:#ccc;}
+        #content {border:1px solid #000;border-top-width:0;}
+        #content ul {line-height:25px;display:none;    margin:0 30px;padding:10px 0;}
+    </style>
 </head>
+
 <body>
-<div id="wrapper">
-    <header><h2>jQuery+Css3 多功能表单弹出层插件 </h2></header>
-    <div class="box">
-        <div class="demo">
-            <h3>&gt; 下列需要引入animate.min.css动画库：</h3>
-            <div class="example">
-                <a href="javascript:;" class="bounceIn dialog">bounceIn动画</a>
-                <a href="javascript:;" class="bounceInDown dialog">bounceInDown动画</a>
-                <a href="javascript:;" class="bounceInLeft dialog">bounceInLeft动画</a>
-                <a href="javascript:;" class="bounceInRight dialog">bounceInRight动画</a>
-                <a href="javascript:;" class="bounceInUp dialog">bounceInUp动画</a>
-                <a href="javascript:;" class="rollIn dialog">rollIn动画</a>
-                <a href="javascript:;" class="fadeIn dialog">fadeIn动画</a>
-                <a href="javascript:;" class="fadeInUpBig dialog">fadeInUpBig动画</a>
-                <a href="javascript:;" class="lightSpeedIn dialog">lightSpeedIn动画</a>
-                <a href="javascript:;" class="flipInX dialog">flipInX动画</a>
-                <a href="javascript:;" class="rotateInDownLeft dialog">rotateInDownLeft动画</a>
-                <a href="javascript:;" class="rotateInDownRight dialog">rotateInDownRight动画</a>
-                <a href="javascript:;" class="rotateInUpLeft dialog">rotateInUpLeft动画</a>
-                <a href="javascript:;" class="rotateInUpRight dialog">rotateInUpRight动画</a>
-                <a href="javascript:;" class="rubberBand dialog">rubberBand动画</a>
-                <a href="javascript:;" class="zoomIn dialog">zoomIn动画</a>
-                <a href="javascript:;" class="zoomInDown dialog">zoomInDown动画</a>
-                <a href="javascript:;" class="zoomInLeft dialog">zoomInLeft动画</a>
-                <a href="javascript:;" class="zoomInRight dialog">zoomInRight动画</a>
-                <a href="javascript:;" class="zoomInUp dialog">zoomInUp动画</a>
-            </div>
+<!-- html代码begin -->
+<div id="outer">
+    <ul id="tab">
+        <li class="current">tab标签</li>
+        <li>qq在线客服代码</li>
+        <li>css3</li>
+    </ul>
+    <div id="content">
+        <ul style="display:block;">
+            <a href="http://www.lanrenzhijia.com/tab">tab标签</a>
+        </ul>
+        <ul>
+            <a href="http://www.lanrenzhijia.com/service">qq在线客服代码</a>
+        </ul>
+        <ul>
+            <a href="http://www.lanrenzhijia.com/js/css3">css3</a>
+        </ul>
+    </div>
+</div>
+<!-- html代码end -->
 
-            <h3>&gt; 表单示例:</h3>
-            <div class="example">
-                <a href="javascript:;" class="demo0">带标题的</a>
-                <a href="javascript:;" class="demo16">淡出关闭效果</a>
-                <a href="javascript:;" class="demo1">改变宽度</a>
-                <a href="javascript:;" class="demo2">改变高度</a>
-                <a href="javascript:;" class="demo3">改变宽和高</a>
-                <a href="javascript:;" class="demo4">改变位置</a>
-                <a href="javascript:;" class="demo14">显示前回调</a>
-                <a href="javascript:;" class="demo15">隐藏后回调</a>
-                <a href="javascript:;" class="demo5">不重置表单</a>
-                <a href="javascript:;" class="demo6">遮罩不可点击关闭</a>
-                <a href="javascript:;" class="demo7">改变弹框背景色</a>
-                <a href="javascript:;" class="demo8">改变遮罩背景色</a>
-                <a href="javascript:;" class="demo9">改变关闭按钮背景色</a>
-                <a href="javascript:;" class="demo18">不显示关闭按钮</a>
-                <a href="javascript:;" class="demo10">错误提示</a>
-                <a href="javascript:;" class="demo11">正确提示</a>
-                <a href="javascript:;" class="demo12">显示加载</a>
-                <a href="javascript:;" class="demo13">移除加载</a>
-                <a href="javascript:;" class="demo17 bounceIn">鼠标放这触发</a>
-            </div>
-
-
-        </div><!-- demo end -->
-        <!-- 注意：请将要放入弹框的内容放在比如id="HBox"的容器中，然后将box的值换成该ID即可，比如：$(element).hDialog({'box':'#HBox'}); -->
-        <div id="HBox">
-            <form action="" method="post" onsubmit="return false;">
-                <ul class="list">
-                    <li>
-                        <strong>昵 称  <font color="#ff0000">*</font></strong>
-                        <div class="fl"><input type="text" name="nickname" value="" class="ipt nickname" /></div>
-                    </li>
-                    <li>
-                        <strong>手 机 <font color="#ff0000">*</font></strong>
-                        <div class="fl"><input type="text" name="phone" value="" class="ipt phone" /></div>
-                    </li>
-                    <li>
-                        <strong>邮 箱 <font color="#ff0000">*</font></strong>
-                        <div class="fl"><input type="text" name="email" value="" class="ipt email" /></div>
-                    </li>
-                    <li>
-                        <strong>性 别 <font color="#ff0000">&nbsp;</font></strong>
-                        <div class="fl">
-                            <label class="mr10"><input type="radio" name="sex" value="1"/>男</label>
-                            <label class="mr10"><input type="radio" name="sex" value="2"/>女</label>
-                            <label><input type="radio" name="sex" value="3"/>保密</label>
-                        </div>
-                    </li>
-                    <li>
-                        <strong>爱 好 <font color="#ff0000">&nbsp;</font></strong>
-                        <div class="fl">
-                            <label class="mr10"><input type="checkbox" name="like" value="男" />男</label>
-                            <label class="mr10"><input type="checkbox" name="like" value="女"/>女</label>
-                            <label><input type="checkbox" name="like" value="都喜欢"/>都喜欢</label>
-                        </div>
-                    </li>
-                    <li><input type="submit" value="确认提交" class="submitBtn" /></li>
-                </ul>
-            </form>
-        </div><!-- HBox end -->
-    </div><!-- box end -->
-</div><!-- wrapper end -->
-<script src="lib/js/jquery-1.10.2.min.js"></script>
-<script src="jquery.hDialog.js"></script>
+<script src="http://www.lanrenzhijia.com/ajaxjs/jquery.min.js"></script>
 <script>
     $(function(){
-        var $el = $('.dialog');
-        $el.hDialog();
+        window.onload = function()
+        {
+            var $li = $('#tab li');
+            var $ul = $('#content ul');
 
-        //带标题的
-        $('.demo0').hDialog({title: '测试弹框标题',height: 300});
-
-        //改变宽度
-        $('.demo1').hDialog({width: 500});
-
-        //改变高度
-        $('.demo2').hDialog({height: 400});
-
-        //改变宽和高
-        $('.demo3').hDialog({width:600,height: 500});
-
-        //改变位置
-        $('.demo4').hDialog({positions: 'top'});
-
-        //不清空表单
-        $('.demo5').hDialog({resetForm: false});
-
-        //遮罩不可关闭
-        $('.demo6').hDialog({modalHide: false});
-
-        //改变弹框背景色
-        $('.demo7').hDialog({boxBg: '#eeeeee'});
-
-        //改变遮罩背景色
-        $('.demo8').hDialog({modalBg: 'rgba(255,255,255,0.7)'});
-
-        //改变关闭背景色
-        $('.demo9').hDialog({closeBg: '#4A74B5'});
-
-        //错误文字提示
-        $('.demo10').click(function(){
-            $.tooltip('My God, 出错啦！！！');
-        });
-
-        //正确文字提示
-        $('.demo11').click(function(){
-            $.tooltip('OK, 操作成功！', 2500, true);
-        });
-
-        //显示加载
-        $('.demo12').click(function(){
-            //自定义文字： $.showLoading('玩命加载中...');
-            //自定义宽高： $.showLoading('努力加载中...',140,40);
-            $.showLoading();
-        });
-
-        //移除加载
-        $('.demo13').click(function(){
-            $.hideLoading();
-        });
-
-        //显示前的回调方法
-        $('.demo14').hDialog({beforeShow: function(){
-                alert('显示前执行');
-            }});
-
-        //隐藏后的回调方法
-        $('.demo15').hDialog({afterHide: function(){
-                alert('隐藏后执行');
-            }});
-
-        //fadeOut淡出关闭效果
-        $('.demo16').hDialog({effect: 'fadeOut'});
-
-        //悬浮触发
-        $('.demo17').hDialog({triggerEvent: 'mouseenter'});
-
-        //不显示关闭按钮
-        $('.demo18').hDialog({closeHide: false});
-
-        //返回顶部
-        $.goTop();
-
-        //提交并验证表单
-        $('.submitBtn').click(function() {
-            var EmailReg = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/; //邮件正则
-            var PhoneReg = /^0{0,1}(13[0-9]|15[0-9]|153|156|18[7-9])[0-9]{8}$/ ; //手机正则
-            var $nickname = $('.nickname');
-            var $email = $('.email');
-            var $phone = $('.phone');
-            if($nickname.val() == ''){
-                $.tooltip('昵称还没填呢...'); $nickname.focus();
-            }else if($phone.val() == ''){
-                $.tooltip('手机还没填呢...'); $phone.focus();
-            }else if(!PhoneReg.test($phone.val())){
-                $.tooltip('手机格式错咯...'); $phone.focus();
-            }else if($email.val() == ''){
-                $.tooltip('邮箱还没填呢...'); $email.focus();
-            }else if(!EmailReg.test($email.val())){
-                $.tooltip('邮箱格式错咯...'); $email.focus();
-            }else{
-                $.tooltip('提交成功，2秒后自动关闭',2000,true);
-                setTimeout(function(){
-                    //$el.hDialog('close',{box:'#HBox'},'http://smwell.sinaapp.com/');  //也可以加跳转链接哦~
-                    $el.hDialog('close',{box:'#HBox'});
-                },2000);
-            }
-        });
-
-
+            $li.mouseover(function(){
+                var $this = $(this);
+                var $t = $this.index();
+                $li.removeClass();
+                $this.addClass('current');
+                $ul.css('display','none');
+                $ul.eq($t).css('display','block');
+            })
+        }
     });
 </script>
+
 </body>
 </html>
