--- a/profile_new.html
+++ b/profile_new.html
@@ -43,6 +43,7 @@
     <header id="header_wrapper" class="shrink">
         <!--begin header -->
         <div id="header" class="clearfix">
+
             <!--begin row -->
             <div class="row">
                 <!--begin twelvecol -->
@@ -78,6 +79,7 @@
                         <!--<li class="last">
                             <a href="#subscribe">Subscribe</a>
                         </li>-->
+                        <div class="header_profile"> <a class="log_aa" href="">登录</a><a class="reg_aa" href="">注册</a></div>
                     </ul>
                     <!--end nav -->
 
