--- a/hive-ios-master/app/pages/html/component.html
+++ b/hive-ios-master/app/pages/html/component.html
@@ -61,9 +61,9 @@
       }
       const comment = {
         date: new Date(),
-        text:'FFBaby',
+        text:'',
         author:{
-          name:'Hello Kitty',
+          name:'',
           avatarUrl: 'http://placekitten.com/g/64/64'
         }
       }
